# flights-demo-app

backend/: Containerfile  pod.yaml  pyproject.toml  requirements.txt
backend/flightsapi/: __init__.py  __main__.py  main.py
db/: Containerfile  pod.yaml
