[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flightsapi"
authors = [{ name = "Jonathan Lopez", email = "jonathanglopez@gmail.com" }]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = ["uvicorn", "fastapi", "pydantic", "asyncpg", "uvloop", "gunicorn"]

[project.urls]
Home = "https://www.github.com/otherJL0/flightsapi"

[project.optional-dependencies]
test = ["pytest"]
dev = ["flit", "pip-tools", "pex", "thx", "black", "flake8", "mypy", "isort", "debugpy"]

[project.scripts]
flightsapi-run = "flightsapi:main"
